fix: color dark

--- a/src/lib/components/tabs/_styles.less
+++ b/src/lib/components/tabs/_styles.less
@@ -22,6 +22,14 @@
 		&-nav {
 			margin: 0;
 
+
+			&-more {
+				span {
+					color: var(--coo-dark);
+				}
+			}
+
+
 			.ant-tabs-tab {
 				&-active {
 					color: var(--coo-primary);
